syntax = "proto3";

package cfn.messages;
option go_package = "github.com/kekwy/cfn/messages";

import "google/protobuf/struct.proto";

message TaskInputs {
  map<string, google.protobuf.Struct> data = 1;
}

message TaskOutputs {
  map<string, google.protobuf.Struct> data = 1;
}

message TaskError {
  string message = 1;
}

message TaskFunction {
  string namespace = 1;
  string name = 2;
  bytes code = 3;
}
